chore(backend): javac警告根治(D-102/D-103)——pom固化-Xlint:all防警告默默积累+清零125条存量警告(弃用API替换14/static类名限定30/lossy显式截断10/raw参数化13/varargs与try压制4/死代码5)+6文件IDE警告清理(未用@Autowired字段/StyleStageCompletionHelper死链/text-block尾随空格)；三重验证归零(javac警告0+编译EXIT=0+IDE诊断0)